# Demiurge-Blockchain

./: .cursorrules  .env.example  .gitattributes  .gitignore  ALIGNMENT_REPORT.md  BUILD_IN_EXTERNAL_TERMINAL.md  CLEANUP_PLAN.md  CONTRIBUTING.md  CURSOR_STABILITY_FIX.md  Cargo.toml  DEPLOY_NOW.md  EXTERNAL_BUILD_GUIDE.md  GEMINI.md  QUICK_BUILD.md  README.md  README_WEB_PIVOT.md  REPO_CLEANUP_COMPLETE.md  SECURITY.md  TESTNET_READY.md  build.bat  build.ps1  ignite_demiurge.sh  package.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.ssh/: config  id_ed25519_pleroma  id_ed25519_pleroma.pub  known_hosts  known_hosts.old
aeons/: .gitkeep
aeons/cgt/pallet/: Cargo.toml
aeons/cgt/pallet/src/: lib.rs
aeons/qor-id/pallet/: Cargo.toml
aeons/qor-id/pallet/src/: lib.rs
archive/: README.md
archons/: .gitkeep
blockchain/: BUILD.md  Cargo.toml  DEPENDENCY_CONFLICT_RESOLUTION.md  Dockerfile  Makefile  NODE_BUILD_WORKAROUND.md
blockchain/node/: Cargo.toml  build.rs
blockchain/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
blockchain/pallets/: README.md
blockchain/pallets/pallet-cgt/: Cargo.toml
blockchain/pallets/pallet-cgt/src/: lib.rs  weights.rs
blockchain/pallets/pallet-composable-nfts/: Cargo.toml
blockchain/pallets/pallet-composable-nfts/src/: lib.rs
blockchain/pallets/pallet-dex/: Cargo.toml
blockchain/pallets/pallet-dex/src/: lib.rs
blockchain/pallets/pallet-drc369/: Cargo.toml
blockchain/pallets/pallet-drc369-ocw/: Cargo.toml
blockchain/pallets/pallet-drc369-ocw/src/: lib.rs
blockchain/pallets/pallet-drc369/src/: lib.rs
blockchain/pallets/pallet-energy/: Cargo.toml
blockchain/pallets/pallet-energy/src/: lib.rs
blockchain/pallets/pallet-fractional-assets/: Cargo.toml
blockchain/pallets/pallet-fractional-assets/src/: lib.rs
blockchain/pallets/pallet-game-assets/: Cargo.toml
blockchain/pallets/pallet-game-assets/src/: lib.rs
blockchain/pallets/pallet-governance/: Cargo.toml
blockchain/pallets/pallet-governance/src/: lib.rs
blockchain/pallets/pallet-qor-identity/: Cargo.toml
blockchain/pallets/pallet-qor-identity/src/: lib.rs  weights.rs
blockchain/pallets/pallet-session-keys/: Cargo.toml  README.md
blockchain/pallets/pallet-session-keys/src/: lib.rs  mock.rs  tests.rs  weights.rs
blockchain/pallets/pallet-yield-nfts/: Cargo.toml  README.md
blockchain/pallets/pallet-yield-nfts/src/: lib.rs  weights.rs
blockchain/runtime/: Cargo.toml  build.rs
blockchain/runtime/src/: lib.rs
docker/: .env.example  BLOCKCHAIN_NODE.md  DOCKER_INSTALL_TROUBLESHOOTING.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  docker-compose.override.yml.example  docker-compose.production.yml  docker-compose.yml  nginx.conf
docs/: ADMIN_PORTAL_ACCESS.md  ARCHITECTURE.md  BALANCES_IMPLEMENTATION_COMPLETE.md  BLOCKCHAIN_CONNECTION_FIX.md  BLUEPRINT_UI_GUIDE.md  BUILD_ERROR_RESOLUTION.md  BUILD_FIXES.md  BUILD_FIXES_COMPLETE.md  BUILD_FIX_DEPENDENCY_CONFLICTS.md  BUILD_FIX_PALLET_CGT.md  BUILD_FIX_PALLET_CGT_FINAL.md  BUILD_FIX_SCHNORRKEL.md  BUILD_ISSUE_RESOLUTION.md  BUILD_OUTSIDE_CURSOR.md  BUILD_STATUS.md  BUILD_STATUS_CURRENT.md  BUILD_SUCCESS.md  BUILD_SUMMARY.md  CLEANUP_SUMMARY.md  COMPONENT_MAP.md  CONSENSUS_DESIGN.md  CURRENT_DEVELOPMENT_STATUS.md  CURRENT_MASTERPLAN_STATUS.md  CURRENT_STATUS.md  CURRENT_STATUS_FINAL.md  CURRENT_STATUS_SUMMARY.md  CURSOR_CRASH_RECOVERY.md  CURSOR_SAFE_WORKFLOW.md  CURSOR_STABILITY_QUICK_FIX.md  CURSOR_STABILITY_STATUS.md  CUSTOM_FRAMEWORK_ARCHITECTURE.md  CUSTOM_FRAMEWORK_STATUS.md  DEPENDENCY_CONFLICT_RESOLUTION_FINAL.md  (+103 more)
framework/: ACHIEVEMENTS.md  COMPLETE.md  Cargo.toml  PROGRESS.md  QUICKSTART.md  README.md  SUMMARY.md  VICTORY.md
framework/consensus/: Cargo.toml  README.md
framework/consensus/src/: engine.rs  error.rs  finality.rs  lib.rs  staking.rs  validator.rs
framework/core/: Cargo.toml
framework/core/src/: block.rs  error.rs  lib.rs  runtime.rs  transaction.rs
framework/modules/: Cargo.toml
framework/modules/balances/: Cargo.toml  README.md
framework/modules/balances/src/: balances.rs  error.rs  lib.rs
framework/modules/balances/tests/: balances_test.rs
framework/modules/drc369/: Cargo.toml
framework/modules/drc369/src/: error.rs  lib.rs  nft.rs
framework/modules/energy/: Cargo.toml
framework/modules/energy/src/: energy.rs  error.rs  lib.rs
framework/modules/energy/tests/: energy_test.rs
framework/modules/game-assets/: Cargo.toml
framework/modules/game-assets/src/: assets.rs  error.rs  lib.rs
framework/modules/session-keys/: Cargo.toml
framework/modules/session-keys/src/: error.rs  lib.rs  session.rs
framework/modules/session-keys/tests/: session_keys_test.rs
framework/modules/src/: lib.rs  registry.rs  traits.rs
framework/modules/yield-nfts/: Cargo.toml
framework/modules/yield-nfts/src/: error.rs  lib.rs  yield_nfts.rs
framework/modules/zk/: Cargo.toml  README.md
framework/modules/zk/src/: anonymous_vote.rs  error.rs  lib.rs  private_nft.rs  private_transfer.rs  proofs.rs
framework/network/: Cargo.toml  README.md
framework/network/src/: discovery.rs  error.rs  lib.rs  pool.rs  protocol.rs  service.rs
framework/node/: Cargo.toml  README.md
framework/node/src/: config.rs  lib.rs  main.rs  service.rs
framework/rpc/: Cargo.toml
framework/rpc/src/: error.rs  lib.rs  methods.rs  server.rs  subscriptions.rs
framework/storage/: Cargo.toml
framework/storage/src/: backend.rs  lib.rs  merkle.rs
framework/testnet/: README.md
services/qor-auth/: .env.example  Cargo.toml  Dockerfile
services/qor-auth/migrations/: 001_initial_schema.sql  002_add_god_role.sql  003_add_backup_code.sql
services/qor-auth/scripts/: seed-god-account.sql
services/qor-auth/src/: config.rs  error.rs  main.rs  state.rs
services/qor-auth/src/handlers/: admin.rs  auth.rs  health.rs  mod.rs  profile.rs  zk.rs
services/qor-auth/src/middleware/: auth.rs  mod.rs
services/qor-auth/src/models/: mod.rs  qor_id.rs  session.rs  user.rs
services/qor-auth/src/services/: auth_service.rs  mod.rs  session_service.rs  zk_service.rs
(+266 files in other folders)
