[workspace]
resolver = "2"
members = [
    "node",
    "pallets/pallet-cgt",
    "pallets/pallet-qor-identity",
    "pallets/pallet-drc369",
    "pallets/pallet-game-assets",
    "pallets/pallet-energy",
    "pallets/pallet-composable-nfts",
    "pallets/pallet-dex",
    "pallets/pallet-fractional-assets",
    "pallets/pallet-drc369-ocw",
    "pallets/pallet-governance",
    "pallets/pallet-session-keys",
    "runtime",
]

[workspace.package]
version = "0.1.0"
authors = ["Alaustrup <alaustrup@demiurge.io>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Alaustrup/Demiurge-Blockchain"

[workspace.dependencies]
# Substrate Dependencies (crates.io)
frame-benchmarking = { version = "45.0.0", default-features = false }
frame-benchmarking-cli = { version = "45.0.0" }
frame-executive = { version = "45.0.0", default-features = false }
frame-support = { version = "45.0.0", default-features = false }
frame-system = { version = "45.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "40.0.0", default-features = false }
frame-try-runtime = { version = "0.49.0", default-features = false }
pallet-balances = { version = "38.0.0", default-features = false }
pallet-timestamp = { version = "44.0.0", default-features = false }
sp-api = { version = "40.0.0", default-features = false }
sp-block-builder = { version = "40.0.0", default-features = false }
sp-core = { version = "39.0.0", default-features = false }
sp-genesis-builder = { version = "0.21.0", default-features = false }
sp-inherents = { version = "40.0.0", default-features = false }
sp-io = { version = "44.0.0", default-features = false }
sp-offchain = { version = "40.0.0", default-features = false }
sp-runtime = { version = "45.0.0", default-features = false }
sp-session = { version = "42.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "40.0.0", default-features = false }
sp-version = { version = "43.0.0", default-features = false }
sp-blockchain = { version = "43.0.0" }
sp-consensus = { version = "0.46.0" }
sp-consensus-aura = { version = "0.44.0" }
sp-consensus-grandpa = { version = "27.0.0" }
sp-keyring = { version = "45.0.0" }
sp-keystore = { version = "0.45.0" }
sp-timestamp = { version = "40.0.0" }

sc-cli = { version = "0.55.0" }
sc-service = { version = "0.55.0" }
sc-executor = { version = "0.47.0" }
sc-network = { version = "0.55.0" }
sc-network-gossip = { version = "0.54.0" }
sc-network-sync = { version = "0.54.0" }
sc-network-common = { version = "0.52.0" }
sc-consensus = { version = "0.54.0" }
sc-consensus-aura = { version = "0.55.0" }
sc-consensus-grandpa = { version = "0.40.0" }
sc-client-api = { version = "44.0.0" }
sc-rpc = { version = "49.0.0" }
sc-rpc-api = { version = "0.54.0" }
sc-transaction-pool = { version = "43.0.0" }
sc-transaction-pool-api = { version = "43.0.0" }
sc-telemetry = { version = "30.0.0" }
sc-keystore = { version = "38.0.0" }
sc-basic-authorship = { version = "0.53.0" }
sc-offchain = { version = "44.0.0" }
sc-sysinfo = { version = "45.0.0" }
sc-chain-spec = { version = "48.0.0" }
sc-block-builder = { version = "0.48.0" }
substrate-frame-rpc-system = { version = "49.0.0" }

# Encoding
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }

# Local pallets
pallet-cgt = { path = "pallets/pallet-cgt", default-features = false }
pallet-qor-identity = { path = "pallets/pallet-qor-identity", default-features = false }
pallet-drc369 = { path = "pallets/pallet-drc369", default-features = false }
pallet-game-assets = { path = "pallets/pallet-game-assets", default-features = false }
pallet-energy = { path = "pallets/pallet-energy", default-features = false }
pallet-composable-nfts = { path = "pallets/pallet-composable-nfts", default-features = false }
pallet-dex = { path = "pallets/pallet-dex", default-features = false }
pallet-fractional-assets = { path = "pallets/pallet-fractional-assets", default-features = false }
pallet-drc369-ocw = { path = "pallets/pallet-drc369-ocw", default-features = false }
pallet-governance = { path = "pallets/pallet-governance", default-features = false }
pallet-session-keys = { path = "pallets/pallet-session-keys", default-features = false }

# Dependency override to resolve librocksdb-sys conflict
# Force single librocksdb-sys version (use newer 0.17.3)
[patch.crates-io]
librocksdb-sys = "0.17.3"