[workspace]
resolver = "2"
members = [
    "node",
    "pallets/pallet-cgt",
    "pallets/pallet-qor-identity",
    "pallets/pallet-drc369",
    "pallets/pallet-game-assets",
    "pallets/pallet-energy",
    "pallets/pallet-composable-nfts",
    "pallets/pallet-dex",
    "pallets/pallet-fractional-assets",
    "pallets/pallet-drc369-ocw",
    "pallets/pallet-governance",
    "pallets/pallet-session-keys",
    "runtime",
]

[workspace.package]
version = "0.1.0"
authors = ["Alaustrup <alaustrup@demiurge.io>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Alaustrup/Demiurge-Blockchain"

[workspace.dependencies]
# Substrate Dependencies (crates.io)
frame-benchmarking = { version = "35.0.0", default-features = false }
frame-benchmarking-cli = { version = "39.0.0" }
frame-executive = { version = "35.0.0", default-features = false }
frame-support = { version = "35.0.0", default-features = false }
frame-system = { version = "35.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "33.0.0", default-features = false }
frame-try-runtime = { version = "0.41.0", default-features = false }
pallet-balances = { version = "36.0.0", default-features = false }
pallet-timestamp = { version = "34.0.0", default-features = false }
sp-api = { version = "33.0.0", default-features = false }
sp-block-builder = { version = "33.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-genesis-builder = { version = "0.14.0", default-features = false }
sp-inherents = { version = "33.0.0", default-features = false }
sp-io = { version = "37.0.0", default-features = false }
sp-offchain = { version = "33.0.0", default-features = false }
sp-runtime = { version = "38.0.0", default-features = false }
sp-session = { version = "34.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "33.0.0", default-features = false }
sp-version = { version = "36.0.0", default-features = false }
sp-blockchain = { version = "35.0.0" }
sp-consensus = { version = "0.39.0" }
sp-consensus-aura = { version = "0.39.0" }
sp-consensus-grandpa = { version = "20.0.0" }
sp-keyring = { version = "38.0.0" }
sp-keystore = { version = "0.40.0" }
sp-timestamp = { version = "33.0.0" }

sc-cli = { version = "0.43.0" }
sc-service = { version = "0.42.0" }
sc-executor = { version = "0.39.0" }
sc-network = { version = "0.41.0" }
sc-network-gossip = { version = "0.41.0" }
sc-network-sync = { version = "0.40.0" }
sc-network-common = { version = "0.40.0" }
sc-consensus = { version = "0.40.0" }
sc-consensus-aura = { version = "0.41.0" }
sc-consensus-grandpa = { version = "0.26.0" }
sc-client-api = { version = "35.0.0" }
sc-rpc = { version = "36.0.0" }
sc-rpc-api = { version = "0.40.0" }
sc-transaction-pool = { version = "35.0.0" }
sc-transaction-pool-api = { version = "35.0.0" }
sc-telemetry = { version = "21.0.0" }
sc-keystore = { version = "32.0.0" }
sc-basic-authorship = { version = "0.41.0" }
sc-offchain = { version = "36.0.0" }
sc-sysinfo = { version = "34.0.0" }
sc-chain-spec = { version = "34.0.0" }
sc-block-builder = { version = "0.40.0" }
substrate-frame-rpc-system = { version = "35.0.0" }

# Encoding
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }

# Local pallets
pallet-cgt = { path = "pallets/pallet-cgt", default-features = false }
pallet-qor-identity = { path = "pallets/pallet-qor-identity", default-features = false }
pallet-drc369 = { path = "pallets/pallet-drc369", default-features = false }
pallet-game-assets = { path = "pallets/pallet-game-assets", default-features = false }
pallet-energy = { path = "pallets/pallet-energy", default-features = false }
pallet-composable-nfts = { path = "pallets/pallet-composable-nfts", default-features = false }
pallet-dex = { path = "pallets/pallet-dex", default-features = false }
pallet-fractional-assets = { path = "pallets/pallet-fractional-assets", default-features = false }
pallet-drc369-ocw = { path = "pallets/pallet-drc369-ocw", default-features = false }
pallet-governance = { path = "pallets/pallet-governance", default-features = false }
pallet-session-keys = { path = "pallets/pallet-session-keys", default-features = false }
