[workspace]
resolver = "2"
members = [
    "node",
    "pallets/pallet-cgt",
    "pallets/pallet-qor-identity",
    "pallets/pallet-drc369",
    "pallets/pallet-game-assets",
    "pallets/pallet-energy",
    "pallets/pallet-composable-nfts",
    "pallets/pallet-dex",
    "pallets/pallet-fractional-assets",
    "pallets/pallet-drc369-ocw",
    "pallets/pallet-governance",
    "pallets/pallet-session-keys",
    "pallets/pallet-yield-nfts",
    "runtime",
]

[workspace.package]
version = "0.1.0"
authors = ["Alaustrup <alaustrup@demiurge.io>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Alaustrup/Demiurge-Blockchain"

# Use Substrate fork with librocksdb-sys fix (local path)
[patch.crates-io]
# Client dependencies
sc-cli = { path = "../substrate/client/cli", package = "sc-cli" }
sc-service = { path = "../substrate/client/service", package = "sc-service" }
sc-client-db = { path = "../substrate/client/db", package = "sc-client-db" }

# Frame dependencies - use local Substrate fork
frame-system = { path = "../substrate/frame/system", package = "frame-system" }
frame-support = { path = "../substrate/frame/support", package = "frame-support" }
frame-support-procedural = { path = "../substrate/frame/support/procedural", package = "frame-support-procedural" }
frame-executive = { path = "../substrate/frame/executive", package = "frame-executive" }
frame-benchmarking = { path = "../substrate/frame/benchmarking", package = "frame-benchmarking" }
frame-system-rpc-runtime-api = { path = "../substrate/frame/system/rpc/runtime-api", package = "frame-system-rpc-runtime-api" }
pallet-balances = { path = "../substrate/frame/balances", package = "pallet-balances" }
pallet-timestamp = { path = "../substrate/frame/timestamp", package = "pallet-timestamp" }

# SP primitives - use local Substrate fork
sp-api = { path = "../substrate/primitives/api", package = "sp-api" }
sp-block-builder = { path = "../substrate/primitives/block-builder", package = "sp-block-builder" }
sp-core = { path = "../substrate/primitives/core", package = "sp-core" }
sp-runtime = { path = "../substrate/primitives/runtime", package = "sp-runtime" }
sp-inherents = { path = "../substrate/primitives/inherents", package = "sp-inherents" }
sp-io = { path = "../substrate/primitives/io", package = "sp-io" }
sp-offchain = { path = "../substrate/primitives/offchain", package = "sp-offchain" }
sp-session = { path = "../substrate/primitives/session", package = "sp-session" }
sp-std = { path = "../substrate/primitives/std", package = "sp-std" }
sp-transaction-pool = { path = "../substrate/primitives/transaction-pool", package = "sp-transaction-pool" }
sp-version = { path = "../substrate/primitives/version", package = "sp-version" }
sp-weights = { path = "../substrate/primitives/weights", package = "sp-weights" }

[workspace.dependencies]
# Substrate Dependencies - Use local fork paths
frame-benchmarking = { path = "../substrate/frame/benchmarking", default-features = false }
frame-benchmarking-cli = { version = "39.0.0" }
frame-executive = { path = "../substrate/frame/executive", default-features = false }
frame-support = { path = "../substrate/frame/support", default-features = false }
frame-system = { path = "../substrate/frame/system", default-features = false }
frame-system-rpc-runtime-api = { path = "../substrate/frame/system/rpc/runtime-api", default-features = false }
frame-try-runtime = { version = "0.41.0", default-features = false }
pallet-balances = { path = "../substrate/frame/balances", default-features = false }
pallet-timestamp = { path = "../substrate/frame/timestamp", default-features = false }
sp-api = { path = "../substrate/primitives/api", default-features = false }
sp-block-builder = { path = "../substrate/primitives/block-builder", default-features = false }
sp-core = { path = "../substrate/primitives/core", default-features = false }
sp-genesis-builder = { version = "0.14.0", default-features = false }
sp-inherents = { path = "../substrate/primitives/inherents", default-features = false }
sp-io = { path = "../substrate/primitives/io", default-features = false }
sp-offchain = { path = "../substrate/primitives/offchain", default-features = false }
sp-runtime = { path = "../substrate/primitives/runtime", default-features = false }
sp-session = { path = "../substrate/primitives/session", default-features = false }
sp-std = { path = "../substrate/primitives/std", default-features = false }
sp-transaction-pool = { path = "../substrate/primitives/transaction-pool", default-features = false }
sp-version = { path = "../substrate/primitives/version", default-features = false }
sp-blockchain = { version = "35.0.0" }
sp-consensus = { version = "0.39.0" }
sp-consensus-aura = { version = "0.39.0" }
sp-consensus-grandpa = { version = "20.0.0" }
sp-keyring = { version = "38.0.0" }
sp-keystore = { version = "0.40.0" }
sp-timestamp = { version = "33.0.0" }

sc-cli = { version = "0.43.0" }
sc-service = { version = "0.42.0" }
sc-executor = { version = "0.39.0" }
sc-network = { version = "0.41.0" }
sc-network-gossip = { version = "0.41.0" }
sc-network-sync = { version = "0.40.0" }
sc-network-common = { version = "0.40.0" }
sc-consensus = { version = "0.40.0" }
sc-consensus-aura = { version = "0.41.0" }
sc-consensus-grandpa = { version = "0.26.0" }
sc-client-api = { version = "35.0.0" }
sc-rpc = { version = "36.0.0" }
sc-rpc-api = { version = "0.40.0" }
sc-transaction-pool = { version = "35.0.0" }
sc-transaction-pool-api = { version = "35.0.0" }
sc-telemetry = { version = "21.0.0" }
sc-keystore = { version = "32.0.0" }
sc-basic-authorship = { version = "0.41.0" }
sc-offchain = { version = "36.0.0" }
sc-sysinfo = { version = "34.0.0" }
sc-chain-spec = { version = "34.0.0" }
sc-block-builder = { version = "0.40.0" }
substrate-frame-rpc-system = { version = "35.0.0" }

# Encoding
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }

# Local pallets
pallet-cgt = { path = "pallets/pallet-cgt", default-features = false }
pallet-qor-identity = { path = "pallets/pallet-qor-identity", default-features = false }
pallet-drc369 = { path = "pallets/pallet-drc369", default-features = false }
pallet-game-assets = { path = "pallets/pallet-game-assets", default-features = false }
pallet-energy = { path = "pallets/pallet-energy", default-features = false }
pallet-composable-nfts = { path = "pallets/pallet-composable-nfts", default-features = false }
pallet-dex = { path = "pallets/pallet-dex", default-features = false }
pallet-fractional-assets = { path = "pallets/pallet-fractional-assets", default-features = false }
pallet-drc369-ocw = { path = "pallets/pallet-drc369-ocw", default-features = false }
pallet-governance = { path = "pallets/pallet-governance", default-features = false }
pallet-session-keys = { path = "pallets/pallet-session-keys", default-features = false }
pallet-yield-nfts = { path = "pallets/pallet-yield-nfts", default-features = false }
