[package]
name = "demiurge-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Demiurge Blockchain Node - The Substrate-based Pleroma Network"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "demiurge-node"
path = "src/main.rs"

[dependencies]
# CLI and async
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

# Substrate Client (native only - use default features)
# Aligned to sp-core 34.0.0 for compatibility
sc-cli = "0.47.0"
sc-service = "0.46.0"
sc-executor = "0.40.0"
sc-network = "0.45.0"
sc-network-gossip = "0.45.0"
sc-network-sync = "0.44.0"
sc-network-common = "0.44.0"
sc-consensus = "0.44.0"
sc-consensus-aura = "0.45.0"
sc-consensus-grandpa = "0.24.0"
sc-finality-grandpa = "0.24.0"
sc-client-api = "34.0.0"
sc-rpc = "40.0.0"
sc-rpc-api = "0.44.0"
sc-transaction-pool = "34.0.0"
sc-transaction-pool-api = "34.0.0"
sc-telemetry = "25.0.0"
sc-keystore = "36.0.0"
sc-basic-authorship = "0.45.0"
sc-offchain = "40.0.0"
sc-sysinfo = "34.0.0"
sc-chain-spec = "34.0.0"
sc-block-builder = "0.42.0"

# Substrate Primitives (need std for native)
# Aligned to sp-core 34.0.0
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-inherents = "34.0.0"
sp-timestamp = "34.0.0"
sp-keyring = "34.0.0"
sp-keystore = "0.40.0"
sp-consensus = "0.40.0"
sp-consensus-aura = "0.40.0"
sp-consensus-grandpa = "21.0.0"
sp-api = "34.0.0"
sp-blockchain = "34.0.0"
sp-block-builder = "34.0.0"
sp-transaction-pool = "34.0.0"

# Frame
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-benchmarking-cli = { version = "43.0.0", optional = true }

# RPC
pallet-transaction-payment-rpc = "40.0.0"
substrate-frame-rpc-system = "38.0.0"
jsonrpsee = { version = "0.20", features = ["server", "macros", "async-client"] }
hex = "0.4"

# Local
demiurge-runtime = { path = "../runtime" }


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
tracing = "0.1"

[build-dependencies]
substrate-build-script-utils = "11.0.0"

[features]
default = []
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-benchmarking-cli",
    "demiurge-runtime/runtime-benchmarks",
]
