[package]
name = "demiurge-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Demiurge Blockchain Node - The Substrate-based Pleroma Network"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "demiurge-node"
path = "src/main.rs"

[dependencies]
# CLI and async
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

# Substrate Dependencies (unified via workspace)
sc-cli = { workspace = true }
sc-service = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-gossip = { workspace = true }
sc-network-sync = { workspace = true }
sc-network-common = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-client-api = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-telemetry = { workspace = true }
sc-keystore = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-offchain = { workspace = true }
sc-sysinfo = { workspace = true }
sc-chain-spec = { workspace = true }
sc-block-builder = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-inherents = { workspace = true }
sp-timestamp = { workspace = true }
sp-keyring = { workspace = true }
sp-keystore = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true }
sp-transaction-pool = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-benchmarking-cli = { workspace = true, optional = true }

# RPC
substrate-frame-rpc-system = { workspace = true }
jsonrpsee = { version = "0.20", features = ["server", "macros", "async-client"] }
hex = "0.4"

# Local
demiurge-runtime = { path = "../runtime" }


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
tracing = "0.1"

[build-dependencies]
substrate-build-script-utils = "11.0.0"

[features]
default = []
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-benchmarking-cli",
    "demiurge-runtime/runtime-benchmarks",
]
