[package]
name = "demiurge-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime for the Demiurge Blockchain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }

# Local pallets
pallet-cgt = { workspace = true }
pallet-qor-identity = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-cgt/std",
    "pallet-qor-identity/std",
]
