[package]
name = "demiurge-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime for the Demiurge Blockchain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Encoding
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate Primitives
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-genesis-builder = { workspace = true }

# Frame
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }

# Pallets
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }

# Local pallets
pallet-cgt = { workspace = true }
pallet-qor-identity = { workspace = true }
pallet-drc369 = { workspace = true }
pallet-game-assets = { workspace = true }
pallet-energy = { workspace = true }
pallet-composable-nfts = { workspace = true }
pallet-dex = { workspace = true }
pallet-fractional-assets = { workspace = true }
pallet-drc369-ocw = { workspace = true }
pallet-governance = { workspace = true }
pallet-session-keys = { workspace = true, features = ["runtime"] }
pallet-yield-nfts = { workspace = true }

# Optional
frame-benchmarking = { workspace = true, optional = true }
frame-try-runtime = { workspace = true, optional = true }

[build-dependencies]
substrate-wasm-builder = { version = "24.0.0", optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-genesis-builder/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-cgt/std",
    "pallet-qor-identity/std",
    "pallet-drc369/std",
    "pallet-game-assets/std",
    "pallet-energy/std",
    "pallet-composable-nfts/std",
    "pallet-dex/std",
    "pallet-fractional-assets/std",
    "pallet-drc369-ocw/std",
    "pallet-governance/std",
    "pallet-session-keys/std",
    "pallet-yield-nfts/std",
    "substrate-wasm-builder",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-cgt/runtime-benchmarks",
    "pallet-qor-identity/runtime-benchmarks",
    "pallet-drc369/runtime-benchmarks",
    "pallet-game-assets/runtime-benchmarks",
    "pallet-energy/runtime-benchmarks",
    "pallet-composable-nfts/runtime-benchmarks",
    "pallet-dex/runtime-benchmarks",
    "pallet-fractional-assets/runtime-benchmarks",
    "pallet-drc369-ocw/runtime-benchmarks",
    "pallet-governance/runtime-benchmarks",
]
try-runtime = [
    "frame-try-runtime/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-cgt/try-runtime",
    "pallet-qor-identity/try-runtime",
    "pallet-drc369/try-runtime",
]
