[package]
name = "demiurge-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core runtime engine for Demiurge blockchain"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
demiurge-storage = { path = "../storage" }
demiurge-modules = { path = "../modules" }

[dev-dependencies]
tokio = { workspace = true }
