[package]
name = "demiurge-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "RPC layer for Demiurge blockchain - JSON-RPC + WebSocket"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
codec = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# RPC dependencies
jsonrpsee = { version = "0.20", features = ["server", "macros", "http-server"] }
hex = "0.4"

# Internal dependencies
demiurge-core = { path = "../core" }
demiurge-storage = { path = "../storage" }

[dev-dependencies]
