[package]
name = "demiurge-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage layer for Demiurge blockchain"

[dependencies]
codec = { workspace = true }
blake2 = { workspace = true }
rocksdb = { workspace = true }
thiserror = { workspace = true }
