[package]
name = "qor-auth"
version = "0.1.0"
edition = "2024"
authors = ["Alaustrup <alaustrup@demiurge.io>"]
license = "MIT"
description = "Qor ID Authentication Service - The Non-Dual Identity System"
repository = "https://github.com/Alaustrup/Demiurge-Blockchain"
keywords = ["authentication", "identity", "blockchain", "qor-id"]
categories = ["authentication", "web-programming"]

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "limit"] }

# Async Runtime
tokio = { version = "1.43", features = ["full", "tracing"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
deadpool-redis = "0.18"

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Cryptography
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Zero-Knowledge Proofs (commented out to avoid aws-lc-sys build issues on Windows)
# Can be enabled later when ZK features are fully implemented
# ark-groth16 = "0.5"
# ark-bn254 = "0.5"
# ark-serialize = "0.5"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Metrics
metrics = "0.24"
# metrics-exporter-prometheus = "0.16"  # Commented out - requires aws-lc-sys which has Windows build issues

# Health Checks
tokio-graceful-shutdown = "0.15"

[dev-dependencies]
tokio-test = "0.4"
rstest = "0.23"
wiremock = "0.6"
fake = { version = "3.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[lints.rust]
unsafe_code = "forbid"
